--- a/dk_snippets/web/index.html
+++ b/dk_snippets/web/index.html
@@ -15,6 +15,10 @@
       </div>
     </div>
 
-    <script type="module" src="js/script.js"></script>
+    <section id="requests">
+
+    </section>
+
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
