--- a/dk_snippets/web/index.html
+++ b/dk_snippets/web/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/ui.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=info" />
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -16,7 +17,9 @@
     </div>
 
     <section id="requests">
+    </section>
 
+    <section id="hints">
     </section>
 
     <script type="module" src="./js/script.js"></script>
